--- a/src/app/modules/product/product-addedit/product-addedit.component.css
+++ b/src/app/modules/product/product-addedit/product-addedit.component.css
@@ -2,10 +2,35 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-  }
-  
-  .card__product {
-    height: 150px; /* Adjust the height as needed */
-    overflow: hidden; /* To hide any overflow (cropping) */
-  }
-  
+}
+
+.card__product {
+    height: 150px;
+    /* Adjust the height as needed */
+    overflow: hidden;
+    /* To hide any overflow (cropping) */
+}
+
+.action-btn {
+    width: 100%;
+    height: 50px;
+    background-color: rgba(105, 80, 80, 0.8);
+    position: absolute;
+    bottom: 0;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.card-body {
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.action-btn {
+    opacity: 0;
+    transform: translateY(100%);
+}
+
+.card__product:hover .action-btn {
+    opacity: 1;
+    transform: translateY(0);
+}
