--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -1,40 +1,38 @@
-<main class="m-5 container-fluid ">
-    <!-- <h1>PRODUCT LIST</h1>
-
-    <div class="main-content">
-        <div class="row">
-            <div *ngFor="let product of products;" class="card border-0 rounded-0 shadow col" style="width: 18rem;">
-                <img src="{{product.images[0].path}}" class="card-img-top rounded-0" alt="...">
-                <div class="card-body mt-3 mb-3">
-                    <div class="row">
-                        <div class="col-10">
-                            <h4 class="card-title">{{product.name}}</h4>
-                            <p class="card-text">
-                                <i class="bi bi-star-fill text-warning"></i>
-                                <i class="bi bi-star-fill text-warning"></i>
-                                <i class="bi bi-star-fill text-warning"></i>
-                                <i class="bi bi-star-fill text-warning"></i>
-                                {{product.sku}}
-                            </p>
-                        </div>
-                        <div class="col-2">
-                            <i class="bi bi-bookmark-plus fs-2"></i>
+<main class="main container mt-3 card">
+    <div class="main__heading text-center mt-5">
+        <h1>Product List</h1>
+        <button class="btn btn-primary" [routerLink]="['/products/addedit']">Add Product</button>
+    </div>
+    <form class="container" enctype="multipart/form-data" method="post">
+        <div class="row mt-5">
+            <div class="row">
+                <div class="col-12">
+                    <div *ngFor="let item of items; let i=index;" class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-3 card-image-wrapper">
+                                <ng-container>
+                                    <img src="{{apiUrl + '/' +item.images[0].path}}" alt="Card Image" class="img-fluid card-image">
+                                </ng-container>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body">
+                                    <h5 class="card-head">{{item.name}}</h5>
+                                    <p class="card-text"> SKU: {{item.sku}}</p>
+                                    <p class="card-text">Price: {{item.price}} &#x20B9;</p>
+                                    <p class="card-text"><small class="text-muted">Updated {{updatedOn(item.updatedOn)}}</small></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 d-flex justify-content-around align-items-center">
+                                <button class="btn btn-secondary" title="Edit" [routerLink]="['/products/addedit']" [queryParams]="{id: item._id}"><i class="bi bi-pencil-square"></i></button>
+                                <button class="btn btn-danger" title="Delete" (click)="deleteProduct(item._id)"><i class="bi bi-trash"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row align-items-center text-center g-0">
-                    <div class="col-4">
-                        <h5>${{product.price}}</h5>
-                    </div>
-                    <div class="col-8">
-                        <a href="#" class="btn btn-dark w-100 p-3 rounded-0 text-warning">ADD TO CART</a>
-                    </div>
+                <div class="col-12 text-center" *ngIf="items.length == 0">
+                    <p>No products found</p>
                 </div>
             </div>
-        </div> 
-    </div> -->
-
-
-    
-
+        </div>
+    </form>
 </main>
