--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <main class="main container mt-3 card">
     <div class="main__heading text-center mt-5">
         <h1>Product List</h1>
-        <button class="btn btn-primary" [routerLink]="['/products/addedit']">Add Product</button>
+        <button class="btn btn-primary" [routerLink]="['/addedit']">Add Product</button>
     </div>
     <form class="container" enctype="multipart/form-data" method="post">
         <div class="row mt-5">
@@ -23,7 +23,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3 d-flex justify-content-around align-items-center">
-                                <button class="btn btn-secondary" title="Edit" [routerLink]="['/products/addedit']" [queryParams]="{id: item._id}"><i class="bi bi-pencil-square"></i></button>
+                                <button class="btn btn-secondary" title="Edit" [routerLink]="['/addedit']" [queryParams]="{id: item._id}"><i class="bi bi-pencil-square"></i></button>
                                 <button class="btn btn-danger" title="Delete" (click)="deleteProduct(item._id)"><i class="bi bi-trash"></i></button>
                             </div>
                         </div>
